--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body {
-    font-family: 'IvyStyle TW', sans-serif;
+    font-family: 'ivystyle-tw', sans-serif;
     background-color: #282c34;
     color: #f0f0f0;
     overflow-x: hidden;
